--- a/template.html
+++ b/template.html
@@ -11,22 +11,31 @@
 </head>
 
 <body>
-    <div id="header">
-        <div id="photo"></div>
-        <div id="name"></div>
-        <div id="username"></div>
-        <div id="bio"></div>
-        <div id="location"></div>
-        <div id="ghurl"></div>
-        <div id="blogurl"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12" id="header">
+                <div class="row" id="photo">
+                    <img src="https://via.placeholder.com/150" alt="User Photo">
+                </div>
+                <div class="row" id="greeting">Greeting</div>
+                <div class="row" id="name">User Name</div>
+                <div class="row" id="company">Company</div>
+                <div class="row" id="links">Links</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-sm-6" id="repos">Repos</div>
+                    <div class="col-sm-6" id="followers">Followers</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6" id="ghStars">GH Stars</div>
+                    <div class="col-sm-6" id="following">Following</div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="data">
-        <div id="repositories"></div>
-        <div id="followers"></div>
-        <div id="ghStars"></div>
-        <div id="following"></div>
-    </div>
-
 </body>
 
 </html>
