--- a/index.html
+++ b/index.html
@@ -5,34 +5,141 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style1.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     <title>Profile Generator</title>
+    <style>
+        @page {
+            margin: 0;
+        }
+
+        *,
+        *::after,
+        *::before {
+            box-sizing: border-box;
+        }
+
+        html,
+        body {
+            padding: 0;
+            margin: 0;
+        }
+
+        html,
+        body,
+        .wrapper {
+            height: 100%;
+        }
+
+        body {
+            -webkit-print-color-adjust: exact !important;
+            font-family: 'Cabin', sans-serif;
+        }
+
+        main {
+            height: auto;
+            padding-top: 30px;
+        }
+
+        .photo-header {
+            margin: 0 auto;
+            margin-bottom: 50px;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 10px;
+            width: 75%;
+            border-radius: 6px;
+            background-color: brown;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .photo-header img {
+            width: 250px;
+            height: 250px;
+            margin-top: -75px;
+            box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
+            border: 6px solid;
+        }
+
+        .container {
+            padding: 50px;
+        }
+
+        .row {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .card {
+            padding: 20px;
+            border-radius: 6px;
+            margin: 20px;
+            color: white;
+            background-color: green;
+        }
+
+        .col {
+            flex: 1;
+            text-align: center;
+        }
+
+        a,
+        a:hover {
+            text-decoration: none;
+            color: inherit;
+            font-weight: bold;
+        }
+
+        @media print {
+            body {
+                zoom: .5;
+            }
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12" id="header">
+            <div class="col-sm-12 photo-header" id="headerDiv">
                 <div class="row" id="photo">
                     <img src="${avatar_url}" alt="User Photo">
                 </div>
-                <div class="row" id="greeting">Greeting</div>
+                <div class="row" id="greeting">Hello! My name is ${name}.</div>
                 <div class="row" id="name">${username}</div>
-                <div class="row" id="company">Company</div>
-                <div class="row" id="links">Links</div>
+                <div class="row" id="company">${company}</div>
+                <div class="row" id="bio">${bio}</div>
+                <div class="row">Favorite Color: ${color}</div>
+                <div class="row" id="links">
+                    <a href="#">${location}</a>
+                    <a href="https://github.com/${username}">Github Profile</a>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
                 <div class="row">
-                    <div class="col-sm-6" id="repos">${public_repos}</div>
-                    <div class="col-sm-6" id="followers">${followers}</div>
+                    <div class="col-sm-6 card" id="repos">Public Repositories: ${public_repos}</div>
+                    <div class="col-sm-6 card" id="followers">Followers: ${followers}</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6" id="ghStars">GH Stars</div>
-                    <div class="col-sm-6" id="following">${following}</div>
+                    <div class="col-sm-6 card" id="ghStars">GH Stars: </div>
+                    <div class="col-sm-6 card" id="following">Following: ${following}</div>
                 </div>
             </div>
         </div>
