--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
     <title>Profile Generator</title>
     <style>
         @page {
@@ -78,11 +67,10 @@
         }
 
         .row {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
             margin-top: 20px;
             margin-bottom: 20px;
+            display: flex;
+            justify-content: center
         }
 
         .card {
@@ -94,7 +82,6 @@
         }
 
         .col {
-            flex: 1;
             text-align: center;
         }
 
@@ -120,13 +107,21 @@
                 <div class="row" id="photo">
                     <img src="${avatar_url}" alt="User Photo">
                 </div>
-                <div class="row" id="greeting">Hello! My name is ${name}.</div>
-                <div class="row" id="name">${username}</div>
-                <div class="row" id="company">${company}</div>
-                <div class="row" id="bio">${bio}</div>
-                <div class="row">Favorite Color: ${color}</div>
+                <div class="row" id="greeting">
+                    <h1>Hello! My name is ${name}.</h1>
+                </div>
+                <div class="row" id="name">
+                    <h2>${username}</h2>
+                </div>
+                <div class="row" id="company">
+                    <h2>${company}</h2>
+                </div>
+                <div class="row" id="bio">
+                    <h2>${bio}</h2>
+                </div>
+                <!-- <div class="row">Favorite Color: ${color}</div> -->
                 <div class="row" id="links">
-                    <a href="#">${location}</a>
+                    <a href='"https://google.com/maps/places/"${location}'>${location}</a>
                     <a href="https://github.com/${username}">Github Profile</a>
                 </div>
             </div>
@@ -134,12 +129,12 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="row">
-                    <div class="col-sm-6 card" id="repos">Public Repositories: ${public_repos}</div>
-                    <div class="col-sm-6 card" id="followers">Followers: ${followers}</div>
+                    <div class="card" id="repos">Public Repositories: ${public_repos}</div>
+                    <div class="card" id="followers">Followers: ${followers}</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 card" id="ghStars">GH Stars: </div>
-                    <div class="col-sm-6 card" id="following">Following: ${following}</div>
+                    <div class="card" id="ghStars">GH Stars: </div>
+                    <div class="card" id="following">Following: ${following}</div>
                 </div>
             </div>
         </div>
